solucionado bug de deteccion de estado de servidor que dejaba de chequear luiego de iniciada una sesión